<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/sec_text5"
        android:textColor="#282A39"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="119dp"
        android:layout_height="34dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048">
    </ImageView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/vpnholy_collects_a_minimal_amount_of_data_to_offer_you_a_fast_and_reliable_vpn_service"
        android:textColor="#282A39"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="350dp"
        android:layout_height="283dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/sec_text1"
        android:textColor="#282A39"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439" />


    <TextView
        android:id="@+id/textView12"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/sec_text4"
        android:textColor="#282A39"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/accept"
        android:layout_width="291dp"
        android:layout_height="57dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/ic_linear_bg"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/accept_and_continue"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/do_not_accept_and_quit"
        android:textColor="#282A39"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accept"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>