<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <ImageView
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:layout_height="70dp"
        android:paddingTop="25dp"
        android:src="@drawable/ic_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".6"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="24dp">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:scaleX="1.09"
            android:src="@drawable/bg_blue"
            tools:layout_editor_absoluteY="24dp" />


        <TextView
            android:id="@+id/tTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="@string/h_zl_ve_s_n_rs_z"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bContinue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.55" />

        <TextView
            android:id="@+id/tSubtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="@string/istedigin_sunucu"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/size_15"
            app:layout_constraintBottom_toTopOf="@+id/bContinue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tTitle"
            app:layout_constraintVertical_bias="0.666" />

        <LinearLayout
            android:id="@+id/rod"
            android:layout_width="75dp"
            android:layout_height="2dp"
            android:background="#000000"
            app:layout_constraintBottom_toTopOf="@+id/tTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.939">

            <FrameLayout
                android:id="@+id/scrollView"
                android:layout_width="25dp"
                android:layout_height="2dp"
                android:background="@color/white" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bContinue"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/white_bg"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/go_on"
            android:textSize="16sp"
            android:textColor="#3740EA"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/world_lotie"
            android:layout_width="1000dp"
            android:layout_height="300dp"
            android:layout_marginTop="100dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:elevation="1dp"
            android:focusable="false"
            android:src="@drawable/mask_group_2"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.443"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>





